--- a/go/docker-compose.yml
+++ b/go/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: .
     ports:
       - "8080:8080"
+    environment:
+      TZ: Asia/Tokyo
     volumes:
       - .:/code
   redis:
