--- a/haskell/wai-sample/wai-sample.cabal
+++ b/haskell/wai-sample/wai-sample.cabal
@@ -18,4 +18,4 @@ executable wai-sample
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
-    , wai, warp, http-types
+    , wai, warp, http-types, bytestring, wai-logger
