docker pull before stack build

--- a/haskell/wai-sample/Makefile
+++ b/haskell/wai-sample/Makefile
@@ -3,4 +3,4 @@ build:
 run:
 	PORT=8080 stack exec wai-sample
 docker-build:
-	stack --docker build -j 1 Cabal
+	docker pull matsubara0507/stack-build:lts-14.17 && stack --docker build -j 1 Cabal
